Update and rename hX.md to h8.md

--- a/Palvelinten-Hallinta/h8.md
+++ b/Palvelinten-Hallinta/h8.md
@@ -1,3 +1,5 @@
+# h8 - Bonus
+
 ## H2
 Ylimääräisenä: Verkon luonti Vagrantfilen avulla sekä mm. for looppi ip-tarkastukseen
 https://github.com/gianglex/Courses/blob/main/Palvelinten-Hallinta/h2-soitto-kotiin.md#c-linux-verkko-vagrantilla
